aboutページ編集

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -11,12 +11,13 @@
     <h6 class="css_font">・歌詞/コード進行など作曲に必要な情報の記録及び編集機能</h6>
     <h6 class="css_font">・各楽曲へコメント機能</h6>
     <h6 class="css_font">・公開/非公開機能</h6>
+    <h6 class="css_font">・楽曲詳細ページの自動スクロール機能</h6>
     <h6 class="css_font">・合言葉機能</h6><br>
     <h4 class="css_font">使用用途例</h4>
     <h6 class="css_font">・曲ネタを思いついた際のメモ</h6>
     <h6 class="css_font">・作成した楽曲情報の公開</h6>
     <h6 class="css_font">・バンドメンバー内での楽曲共有</h6>
-    <h6 class="css_font">・セッションやサポートメンバーへの楽曲共有（合言葉機能）</h6><br>
+    <h6 class="css_font">・セッションやサポートメンバーへの楽曲共有</h6><br>
     <h4 class="css_font">など、楽曲を扱う場面で使用することが出来るツールです。</h4>
   </div>
   <div class="col-2"></div>
