スクロール周り微修正

--- a/app/views/user/songs/show.html.erb
+++ b/app/views/user/songs/show.html.erb
@@ -165,7 +165,8 @@
 <!--自動スクロール-->
 <script>
 var start = false;
-$('table td:not(#hoge), table tr:not(#huga)').on('click', function() {
+$('table td:not(#hoge), table tr:not(#huga)').on('click', function(e) {
+  console.log(e.target);
   if ( start == false ){
     start = true;
     $('html, body').animate(
