--- a/app/views/admin/opinions/index.html.erb
+++ b/app/views/admin/opinions/index.html.erb
@@ -8,7 +8,7 @@
     <table class="table" width="100%">
       <thead class="thead-light">
       <tr>
-        <th class="css_font">ID</th>
+        <th class="css_font">投稿日時</th>
         <th class="css_font">ユーザー名</th>
         <th class="css_font">メールアドレス</th>
         <th class="css_font">ご意見内容</th>
@@ -17,7 +17,7 @@
       <tbody>
         <% @opinion.each do |opinion| %>
         <tr>
-        <td class="css_font"><%= opinion.user_id %></td>
+        <td class="css_font"><%= opinion.created_at %></td>
         <td class="css_font"><%= opinion.user.name %></td>
         <td class="css_font"><%= opinion.user.email %></td>
         <td class="css_font"><%= opinion.opinion %></td>
