--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -63,3 +63,26 @@
 .opinion_form textarea{
   width: 100%;
 }
+
+.pagination{
+    margin: 20px auto 0;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    span{
+        text-align: center;
+        width: 50px;
+        :hover{
+            background-color:#f3f3f3;
+        }
+        a{
+            color: #c0c0c0;
+            display: block;
+            width: 100%;
+            height: 100%;
+            :hover{
+                background-color: #f3f3f3;
+              }
+        }
+    }
+}
