会員検索周り作業中

--- a/app/views/user/songs/index.html.erb
+++ b/app/views/user/songs/index.html.erb
@@ -6,6 +6,13 @@
     <h3 class="css_font title">投稿楽曲一覧</h3>
   </div>
 </div>
+
+<div class="row text-center mt-1">
+  <div class="col-12">
+    <%= render 'user/searches/search' %>
+  </div>
+</div>
+
 <div class="row my-3">
 <!--非公開-->
   <div class="col-6">
