会員楽曲検機能索

--- a/app/views/user/searches/_search.html.erb
+++ b/app/views/user/searches/_search.html.erb
@@ -1,4 +1,4 @@
-<!--会員内indexページに記載する部分テンプレート-->
+<!--会員内indexページに記載する検索窓の部分テンプレート-->
 
   <div class="css_font">
     <%= form_with url: user_search_path, local: true, method: :get do |f| %>
