投稿ページ注意書き

--- a/app/views/user/songs/new.html.erb
+++ b/app/views/user/songs/new.html.erb
@@ -57,6 +57,7 @@
 
       <div class="my-1">
         <%= f.label :コード進行（スペースは全角スペースを使用してください）%><br>
+        <%= f.label :※スマートフォンで使用される場合1行10文字程度にしてください%><br>
         <%= f.text_area :chord, placeholder: "コード進行/歌詞", oninput: "autoResize(this)" %>
       </div>
 
